Создает разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -2,9 +2,76 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>HTML Academy: Sedona</title>
   </head>
   <body>
+    <header class="page-header">
+      <img class="logo" src="" alt="Логотип city of Sedona">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="home.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="hotels.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Избранное
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">ХОЧУ СЮДА!</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="main-index">
+      <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
+      <img class="welcome" src="" alt="Приветствие Седоны">
+      <p class="sedona">Седона - небольшой городок в Аризоне, заслуживающий большего</p>
+
+      <section class="reasons-to-visit">
+        <h2 class="visually-hidden">Причины, чтобы посетить</h2>
+        <ul class="reasons-to-visit-list">
+          <li class="reasons-to-visit-item">
+            <h3 class="reasons-to-visit-title">Настоящий городок</h3>
+            <p class="reasons-to-visit-description">- №1 - Седона - не аттракцион для туристов, там течет своя жизнь</p>
+          </li>
+          <li class="reasons-to-visit-item">
+            <h3 class="reasons-to-visit-title">Там есть мост дьявола</h3>
+            <p class="reasons-to-visit-description">- №2 - Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li class="reasons-to-visit-item">
+            <h3 class="reasons-to-visit-title">Небольшая площадь</h3>
+            <p class="reasons-to-visit-description">- №3 - Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="reasons-to-visit-item">
+            <h3 class="reasons-to-visit-title">Красивая дорога</h3>
+            <p class="reasons-to-visit-description">- №4 - Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="reasons-to-visit-item">
+            <h3 class="reasons-to-visit-title">Мало туристов</h3>
+            <p class="reasons-to-visit-description">- №5 - Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
