Создает разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <img class="logo" src="" alt="Логотип city of Sedona">
+      <img class="logo" src="#" alt="Логотип city of Sedona">
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -43,15 +43,29 @@
 
     <main class="main-index">
       <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
-      <img class="welcome" src="" alt="Приветствие Седоны">
-      <p class="sedona">Седона - небольшой городок в Аризоне, заслуживающий большего</p>
+      <img class="welcome" src="#" alt="Приветствие Седоны">
+      <p class="sedona">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
 
       <section class="reasons-to-visit">
-        <h2 class="visually-hidden">Причины, чтобы посетить</h2>
+        <h2 class="reasons-to-visit-title">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</h2>
         <ul class="reasons-to-visit-list">
           <li class="reasons-to-visit-item">
             <h3 class="reasons-to-visit-title">Настоящий городок</h3>
             <p class="reasons-to-visit-description">- №1 - Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            <ul class="more-reasons-to-visit-list">
+              <li class="more-reasons-to-visit-item">
+                <h4 class="more-reasons-to-visit-title">Жилье</h4>
+                <p class="more-reasons-to-visit-description">Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
+              </li>
+              <li class="more-reasons-to-visit-item">
+                <h4 class="more-reasons-to-visit-title">Еда</h4>
+                <p class="more-reasons-to-visit-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li class="more-reasons-to-visit-item">
+                <h4 class="more-reasons-to-visit-title">Сувениры</h4>
+                <p class="more-reasons-to-visit-description">Не только китайского, но и настоящего местного производства!</p>
+              </li>
+            </ul>
           </li>
           <li class="reasons-to-visit-item">
             <h3 class="reasons-to-visit-title">Там есть мост дьявола</h3>
@@ -71,9 +85,58 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2 class="get-interesting">Заинтересовались?</h2>
+        <p class="get-interesting-search">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="botton" href="#">Поиск гостиницы в Седоне</a>
+      </section>
     </main>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <footer class="page-footer">
+      <section class="subscription">
+        <h2 class="subscription-title">Подпишитесь на рассылку</h2>
+        <p class="subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
+          <input class="field" placeholder="Ваш e-mail" type="email" name="subscription-email" id="subscription-email" required>
+          <button class="button subscription-button" type="submit">
+            <span class="subscribe">Подписаться</span>
+          </button>
+        </form>
+      </section>
+
+      <section class="footer-social">
+        <h2 class="visually-hidden">Давайте дружить</h2>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="https://twitter.com/htmlacademy_ru">
+              <span class="visually-hidden">Twitter</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.facebook.com/htmlacademy">
+              <span class="visually-hidden">Facebook</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/c/HTMLAcademyRUS">
+              <span class="visually-hidden">Youtube</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <address class="contact-address">
+          <a class="contacts-phone" href="tel:+78121212">+7 (812) 812-12-12</a>
+        </address> 
+      </section>
+
+      <section class="htmlacademy">
+        <h2 class="visually-hidden">Разработчик</h2>
+        <p class="visually-hidden">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
+      </section>
+    </footer>
 
   </body>
 </html>
