Создает секцию приветствия

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
     </header>
 
     <main class="main-index">
-      <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
-      <img class="welcome" src="#" alt="Приветствие Седоны">
-      <p class="sedona">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+      <section class="promo">
+        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+        <img class="promo-image" src="#" alt="Приветствие Седоны">
+        <p class="promo-text">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+      </section>
 
       <section class="reasons-to-visit">
         <h2 class="reasons-to-visit-title">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</h2>
@@ -88,7 +90,7 @@
       <section>
         <h2 class="get-interesting">Заинтересовались?</h2>
         <p class="get-interesting-search">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="botton" href="#">Поиск гостиницы в Седоне</a>
+        <a class="button" href="#">Поиск гостиницы в Седоне</a>
       </section>
     </main>
 
@@ -128,7 +130,7 @@
       <section class="contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <address class="contact-address">
-          <a class="contacts-phone" href="tel:+78121212">+7 (812) 812-12-12</a>
+          <a class="contacts-phone" href="tel:+78121212">+7 (812) 812-12-12-12</a>
         </address> 
       </section>
 
