Корректирует разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="utf-8">
     <title>HTML Academy: Sedona</title>
   </head>
+
   <body>
     <header class="page-header">
-      <img class="logo" src="#" alt="Логотип city of Sedona">
+      <a href="#">
+        <img class="logo" src="#" alt="Логотип city of Sedona">
+      </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="home.html">Главная</a>
+            <a class="navigation-link" href="#">
+              Главная
+            </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="about.html">О Седоне</a>
+            <a class="navigation-link" href="#">
+              О Седоне
+            </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="hotels.html">Гостиницы</a>
+            <a class="navigation-link" href="#">
+              Гостиницы
+            </a>
           </li>
         </ul>
         <ul class="navigation-user">
@@ -35,7 +44,9 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">ХОЧУ СЮДА!</a>
+            <a class="navigation-link" href="#">
+              ХОЧУ СЮДА!
+            </a>
           </li>
         </ul>
       </nav>
@@ -43,100 +54,206 @@
 
     <main class="main-index">
       <section class="promo">
-        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+        <h1 class="visually-hidden">
+          Добро пожаловать в Седону
+        </h1>
         <img class="promo-image" src="#" alt="Приветствие Седоны">
-        <p class="promo-text">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="promo-text">
+          Седона - небольшой городок в Аризоне, заслуживающий большего!
+        </p>
       </section>
 
-      <section class="reasons-to-visit">
-        <h2 class="reasons-to-visit-title">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</h2>
-        <ul class="reasons-to-visit-list">
-          <li class="reasons-to-visit-item">
-            <h3 class="reasons-to-visit-title">Настоящий городок</h3>
-            <p class="reasons-to-visit-description">- №1 - Седона - не аттракцион для туристов, там течет своя жизнь</p>
-            <ul class="more-reasons-to-visit-list">
-              <li class="more-reasons-to-visit-item">
-                <h4 class="more-reasons-to-visit-title">Жилье</h4>
-                <p class="more-reasons-to-visit-description">Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
-              </li>
-              <li class="more-reasons-to-visit-item">
-                <h4 class="more-reasons-to-visit-title">Еда</h4>
-                <p class="more-reasons-to-visit-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-              </li>
-              <li class="more-reasons-to-visit-item">
-                <h4 class="more-reasons-to-visit-title">Сувениры</h4>
-                <p class="more-reasons-to-visit-description">Не только китайского, но и настоящего местного производства!</p>
-              </li>
-            </ul>
+      <section class="advantages">
+        <h2 class="advantages-title">
+          Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
+        </h2>
+        <div class="advantages-block">
+          <div class="advantages-block-text">
+            <h3 class="advantages-block-title">
+              Настоящий городок
+            </h3>
+            <p class="advantages-block-number">
+              - №1 -
+            </p>
+            <p class="advantages-block-description">
+              Седона не аттракцион для туристов, там течет своя жизнь
+            </p>
+          </div>
+        </div>
+
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">
+              Жилье
+            </h3>
+            <p class="advantage-description">
+              Рекомендуем пожить в настоящем мотеле, все как в кино!
+            </p>
           </li>
-          <li class="reasons-to-visit-item">
-            <h3 class="reasons-to-visit-title">Там есть мост дьявола</h3>
-            <p class="reasons-to-visit-description">- №2 - Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <li class="advantages-item">
+            <h3 class="advantages-title">
+              Еда
+            </h3>
+            <p class="advantage-description">
+              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+            </p>
           </li>
-          <li class="reasons-to-visit-item">
-            <h3 class="reasons-to-visit-title">Небольшая площадь</h3>
-            <p class="reasons-to-visit-description">- №3 - Все достопримечательности находятся очень близко</p>
+          <li class="advantages-item">
+            <h3 class="advantages-title">
+              Сувениры
+            </h3>
+            <p class="advantage-description">
+              Не только китайского, но и настоящего местного производства!
+            </p>
           </li>
-          <li class="reasons-to-visit-item">
-            <h3 class="reasons-to-visit-title">Красивая дорога</h3>
-            <p class="reasons-to-visit-description">- №4 - Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </ul>
+
+        <div class="advantages-block advantage-blok--reverse">
+          <div class="advantages-block-text">
+            <h3 class="advantages-block-title">
+              Там есть мост дьявола
+            </h3>
+            <p class="advantages-block-number">
+              - №2 -
+            </p>
+            <p class="advantages-block-description">
+              Да, по нему можно пройти! Если вы осмелитесь, разумеется
+            </p>
+          </div>
+        </div>
+
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <div class="advantages-block">
+              <div class="advantages-block-text">
+                <h3 class="advantages-block-title">
+                  Небольшая площадь
+                </h3>
+                <p class="advantages-block-number">
+                  - №3 -
+                </p>
+                <p class="advantages-block-description">
+                  Все достопримечательности находятся очень близко
+                </p>
+              </div>
+            </div>
           </li>
-          <li class="reasons-to-visit-item">
-            <h3 class="reasons-to-visit-title">Мало туристов</h3>
-            <p class="reasons-to-visit-description">- №5 - Большинство едет в Гранд Каньон и толпится там</p>
+          <li class="advantages-item">
+            <div class="advantages-block">
+              <div class="advantages-block-text">
+                <h3 class="advantages-block-title">
+                  Красивая дорога
+                </h3>
+                <p class="advantages-block-number">
+                  - №4 -
+                </p>
+                <p class="advantages-block-description">
+                  Ехать в Седону из Лас-Вегаса совсем не скучно!
+                </p>
+              </div>
+            </div>
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-block">
+              <div class="advantages-block-text">
+                <h3 class="advantages-block-title">
+                  Мало туристов
+                </h3>
+                <p class="advantages-block-number">
+                  - №5 -
+                </p>
+                <p class="advantages-block-description">
+                  Большинство едет в Гранд Каньон и толпится там
+                </p>
+              </div>
+            </div>
           </li>
         </ul>
       </section>
-      <section>
-        <h2 class="get-interesting">Заинтересовались?</h2>
-        <p class="get-interesting-search">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button" href="#">Поиск гостиницы в Седоне</a>
+
+      <section class="search">
+        <h2 class="visually-hidden">
+          Поиск гостиницы
+        </h2>
+        <span class="search-title">
+          Заинтересовались?
+        </span>
+        <p class="search-text">
+          Укажите предполагаемые даты поездки,
+и мы покажем вам лучшие предложения гостиниц в Седоне
+        </p>
+        <a class="search-button" href="#">
+          Поиск гостиницы в Седоне
+        </a>
       </section>
     </main>
 
     <footer class="page-footer">
       <section class="subscription">
-        <h2 class="subscription-title">Подпишитесь на рассылку</h2>
-        <p class="subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <h2 class="subscription-title">
+          Подпишитесь на рассылку
+        </h2>
+        <p class="subscription-description">
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
           <input class="field" placeholder="Ваш e-mail" type="email" name="subscription-email" id="subscription-email" required>
           <button class="button subscription-button" type="submit">
-            <span class="subscribe">Подписаться</span>
+            Подписаться
           </button>
         </form>
       </section>
 
       <section class="footer-social">
-        <h2 class="visually-hidden">Давайте дружить</h2>
+        <h2 class="visually-hidden">
+          Давайте дружить
+        </h2>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="https://twitter.com/htmlacademy_ru">
-              <span class="visually-hidden">Twitter</span>
+            <a class="footer-social-link" href="https://twitter.com/htmlacademy_ru">
+              <span class="visually-hidden">
+                Twitter
+              </span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://www.facebook.com/htmlacademy">
-              <span class="visually-hidden">Facebook</span>
+            <a class="footer-social-link" href="https://www.facebook.com/htmlacademy">
+              <span class="visually-hidden">
+                Facebook
+              </span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://www.youtube.com/c/HTMLAcademyRUS">
-              <span class="visually-hidden">Youtube</span>
+            <a class="footer-social-link" href="https://www.youtube.com/c/HTMLAcademyRUS">
+              <span class="visually-hidden">
+                Youtube
+              </span>
             </a>
           </li>
         </ul>
       </section>
 
       <section class="contacts">
-        <h2 class="visually-hidden">Контакты</h2>
+        <h2 class="visually-hidden">
+          Контакты
+        </h2>
         <address class="contact-address">
-          <a class="contacts-phone" href="tel:+78121212">+7 (812) 812-12-12-12</a>
+          <a class="contacts-phone" href="tel:+78121212">
+            +7 (812) 812-12-12-12
+          </a>
         </address> 
       </section>
 
       <section class="htmlacademy">
-        <h2 class="visually-hidden">Разработчик</h2>
-        <p class="visually-hidden">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
+        <h2 class="visually-hidden">
+          Разработчик
+        </h2>
+        <p class="visually-hidden">
+          Сделано в htmlacademy
+        </p>
+          <a href="#" class="htmlacademy-link">
+            <img src="#" alt="">
+          </a>
       </section>
     </footer>
 
