--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link" href="catalog.html">
               Гостиницы
             </a>
           </li>
