--- a/catalog.html
+++ b/catalog.html
@@ -52,7 +52,7 @@
       </nav>
     </header>
 
-    <main class="">
+    <main class="main-inner">
       <header class="inner-header">
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
@@ -76,19 +76,19 @@
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-imput" type="checkbox" name="pool" checked>
+                  <input class="control-input" type="checkbox" name="pool" checked>
                   Бассейн
                 </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-imput" type="checkbox" name="parking" checked>
+                  <input class="control-input" type="checkbox" name="parking" checked>
                   Парковка
                 </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-imput" type="checkbox" name="wi-fi">
+                  <input class="control-input" type="checkbox" name="wi-fi">
                   Wi-Fi
                 </label>
               </li>
@@ -100,19 +100,19 @@
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-imput" type="radio" name="hotel-group" checked>
+                  <input class="control-input" type="radio" name="hotel-group" checked>
                   Гостиница
                 </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-imput" type="radio" name="hotel-group">
+                  <input class="control-input" type="radio" name="hotel-group">
                   Мотель
                 </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-imput" type="radio" name="hotel-group">
+                  <input class="control-input" type="radio" name="hotel-group">
                   Апартаменты
                 </label>
               </li>
@@ -149,12 +149,12 @@
       <section class="hotels">
         <h2 class="visually-hidden">Результаты поиска</h2>
         <ul class="hotel-list">
-          <li class="hotel-card">
+          <li class="hotel-card"><!--дополнительные обертки для стилизации-->
             <a class="hotel-card-link" href="#">
               <img class="hotel-card-image" src="#" alt="">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>                  
-            <span class="hotel-groupe">Гостиница</span>
+            <span class="hotel-group">Гостиница</span>
             <span class="hotel-card-price">От 4000 ₽</span>
             <a class="hotel-card-button button" href="#">подробнее</a>
             <a class="hotel-like-button button" href="#">В избранное</a>
@@ -166,7 +166,7 @@
               <img class="hotel-card-image" src="#" alt="">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
-            <span class="hotel-groupe">Гостиница</span>
+            <span class="hotel-group">Гостиница</span>
             <span class="hotel-card-price">От 3000 ₽</span>
             <a class="hotel-card-button button" href="#">подробнее</a>
             <a class="hotel-like-button button" href="#">В избранное</a>
@@ -178,7 +178,7 @@
               <img class="hotel-card-image" src="#" alt="">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
-            <span class="hotel-groupe">Гостиница</span>
+            <span class="hotel-group">Гостиница</span>
             <span class="hotel-card-price">От 2000 ₽</span>
             <a class="hotel-card-button button" href="#">подробнее</a>
             <a class="hotel-like-button button" href="#">В избранное</a>
@@ -190,7 +190,7 @@
               <img class="hotel-card-image" src="#" alt="">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
-            <span class="hotel-groupe">Гостиница</span>
+            <span class="hotel-group">Гостиница</span>
             <span class="hotel-card-price">От 3000 ₽</span>
             <a class="hotel-card-button button" href="#">подробнее</a>
             <a class="hotel-like-button button" href="#">В избранное</a>
@@ -203,12 +203,12 @@
       </section>
 
       <section class="pagination">
-        <h2 class="visually-hidden">Нумерация</h2>
+        <h2 class="visually-hidden">Список страниц</h2>
         <span class="pagination-filter">Гостиниц на странице:</span>
         <select class="pagination-control" aria-label="Количество">
-          <option value="four">4</option>
-          <option value="two">2</option>
-          <option value="one">1</option>                             
+          <option value="4">4</option>
+          <option value="2">2</option>
+          <option value="1">1</option>                             
         </select>
 
         <ul class="pagination">
