Добавляет точки в конце описания атрибута alt

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header">
       <a href="#">
-        <img class="logo" src="images/logo.svg" wight="139" height="70" alt="Логотип city of Sedona">
+        <img class="logo" src="images/logo.svg" wight="139" height="70" alt="Логотип city of Sedona.">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -57,7 +57,7 @@
         <h1 class="visually-hidden">
           Добро пожаловать в Седону
         </h1>
-        <img class="promo-image" src="images/welcome.svg" wight="458" height="352" alt="Приветствие Седоны">
+        <img class="promo-image" src="images/welcome.svg" wight="458" height="352" alt="Приветствие Седоны.">
         <p class="promo-text">
           Седона - небольшой городок в Аризоне, заслуживающий большего!
         </p>
@@ -252,7 +252,7 @@
           Сделано в htmlacademy
         </p>
           <a href="#" class="htmlacademy-link">
-            <img src="images/logo-htmlacademy.svg" wight="115" height="33" alt="Логотип htmlacademy">
+            <img src="images/logo-htmlacademy.svg" wight="115" height="33" alt="Логотип htmlacademy.">
           </a>
       </section>
     </footer>
