--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header">
       <a href="index.html">
-        <img class="logo" src="images/logo.svg" wight="139" height="70" alt="Логотип city of Sedona">
+        <img class="logo" src="images/logo.svg" wight="139" height="70" alt="Логотип city of Sedona.">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -151,7 +151,7 @@
         <ul class="hotel-list">
           <li class="hotel-card"><!--дополнительные обертки для стилизации-->
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" wight="299" height="206" alt="Отель Amara Resort & Spa">
+              <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" wight="299" height="206" alt="Отель Amara Resort & Spa.">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>                  
             <span class="hotel-group">Гостиница</span>
@@ -163,7 +163,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-2.jpg" wight="299" height="206" alt="Отель Desert Quail Inn">
+              <img class="hotel-card-image" src="images/hotel/hotel-2.jpg" wight="299" height="206" alt="Отель Desert Quail Inn.">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
             <span class="hotel-group">Гостиница</span>
@@ -175,7 +175,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-3.jpg" wight="299" height="206" alt="Отель Villas at Poco Diablo">
+              <img class="hotel-card-image" src="images/hotel/hotel-3.jpg" wight="299" height="206" alt="Отель Villas at Poco Diablo.">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
             <span class="hotel-group">Гостиница</span>
@@ -187,7 +187,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-4.jpg" wight="299" height="206" alt="Отель GreenTree Inn">
+              <img class="hotel-card-image" src="images/hotel/hotel-4.jpg" wight="299" height="206" alt="Отель GreenTree Inn.">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
             <span class="hotel-group">Гостиница</span>
@@ -298,7 +298,7 @@
           Сделано в htmlacademy
         </p>
           <a href="#" class="htmlacademy-link">
-            <img src="images/logo-htmlacademy.svg" wight="115" height="33" alt="Логотип htmlacademy">
+            <img src="images/logo-htmlacademy.svg" wight="115" height="33" alt="Логотип htmlacademy.">
           </a>
       </section>
     </footer>
