Пытается создать пулл-реквест

--- a/catalog.html
+++ b/catalog.html
@@ -149,7 +149,7 @@
       <section class="hotels">
         <h2 class="visually-hidden">Результаты поиска</h2>
         <ul class="hotel-list">
-          <li class="hotel-card"><!--дополнительные обертки для стилизации-->
+          <li class="hotel-card"><!--добавить дополнительные обертки для стилизации-->
             <a class="hotel-card-link" href="#">
               <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" wight="299" height="206" alt="Отель Amara Resort & Spa.">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
