Создает базовую стилизацию главной страницы

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Sedona</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
@@ -83,7 +84,7 @@
 
         <ul class="advantages-list">
           <li class="advantages-item">
-            <h3 class="advantages-title">
+            <h3 class="advantages-item-title">
               Жилье
             </h3>
             <p class="advantage-description">
@@ -91,7 +92,7 @@
             </p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">
+            <h3 class="advantages-item-title">
               Еда
             </h3>
             <p class="advantage-description">
@@ -99,7 +100,7 @@
             </p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">
+            <h3 class="advantages-item-title">
               Сувениры
             </h3>
             <p class="advantage-description">
@@ -122,9 +123,9 @@
           </div>
         </div>
 
-        <ul class="advantages-list">
+        <ul class="advantages-list"> 
           <li class="advantages-item">
-            <div class="advantages-block">
+            <div class="advantages-block"><!--Правильно ли сделано наименование классов?-->
               <div class="advantages-block-text">
                 <h3 class="advantages-block-title">
                   Небольшая площадь
