Вносит исправления в базовую стилизацию главной страницы

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              ХОЧУ СЮДА!
+            <a class="navigation-link navigation-link--buttom" href="#">
+              Хочу сюда!
             </a>
           </li>
         </ul>
@@ -80,6 +80,7 @@
               Седона не аттракцион для туристов, там течет своя жизнь
             </p>
           </div>
+          <img class="advantages-block" src="images/city-view.jpg" wight="800" height="384" alt="Вид на город.">
         </div>
 
         <ul class="advantages-list">
@@ -91,7 +92,7 @@
               Рекомендуем пожить в настоящем мотеле, все как в кино!
             </p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-food">
             <h3 class="advantages-item-title">
               Еда
             </h3>
@@ -110,6 +111,7 @@
         </ul>
 
         <div class="advantages-block advantage-blok--reverse">
+          <img class="advantages-block" src="images/mountain-view.jpg" wight="800" height="384" alt="Вид на мост дьявола.">
           <div class="advantages-block-text">
             <h3 class="advantages-block-title">
               Там есть мост дьявола
@@ -125,8 +127,8 @@
 
         <ul class="advantages-list"> 
           <li class="advantages-item">
-            <div class="advantages-block"><!--Правильно ли сделано наименование классов?-->
-              <div class="advantages-block-text">
+            <div class="advantages-blocks">
+              <div class="advantages-blocks-text">
                 <h3 class="advantages-block-title">
                   Небольшая площадь
                 </h3>
@@ -139,9 +141,9 @@
               </div>
             </div>
           </li>
-          <li class="advantages-item">
-            <div class="advantages-block">
-              <div class="advantages-block-text">
+          <li class="advantages-item-road">
+            <div class="advantages-blocks">
+              <div class="advantages-blocks-text">
                 <h3 class="advantages-block-title">
                   Красивая дорога
                 </h3>
@@ -155,8 +157,8 @@
             </div>
           </li>
           <li class="advantages-item">
-            <div class="advantages-block">
-              <div class="advantages-block-text">
+            <div class="advantages-blocks">
+              <div class="advantages-blocks-text">
                 <h3 class="advantages-block-title">
                   Мало туристов
                 </h3>
