Вносит дополнительные исправления в базовую стилизацию главной страницы

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-link--buttom" href="#">
+            <a class="navigation-link navigation-link--button" href="#">
               Хочу сюда!
             </a>
           </li>
@@ -92,7 +92,7 @@
               Рекомендуем пожить в настоящем мотеле, все как в кино!
             </p>
           </li>
-          <li class="advantages-item-food">
+          <li class="advantages-item">
             <h3 class="advantages-item-title">
               Еда
             </h3>
@@ -125,51 +125,39 @@
           </div>
         </div>
 
-        <ul class="advantages-list"> 
+        <ul class="advantages-list advantages-list--features"> 
           <li class="advantages-item">
-            <div class="advantages-blocks">
-              <div class="advantages-blocks-text">
-                <h3 class="advantages-block-title">
-                  Небольшая площадь
-                </h3>
-                <p class="advantages-block-number">
-                  - №3 -
-                </p>
-                <p class="advantages-block-description">
-                  Все достопримечательности находятся очень близко
-                </p>
-              </div>
-            </div>
-          </li>
-          <li class="advantages-item-road">
-            <div class="advantages-blocks">
-              <div class="advantages-blocks-text">
-                <h3 class="advantages-block-title">
-                  Красивая дорога
-                </h3>
-                <p class="advantages-block-number">
-                  - №4 -
-                </p>
-                <p class="advantages-block-description">
-                  Ехать в Седону из Лас-Вегаса совсем не скучно!
-                </p>
-              </div>
-            </div>
+            <h3 class="advantages-item-title">
+              Небольшая площадь
+            </h3>
+            <p class="advantages-number">
+              - №3 -
+            </p>
+            <p class="advantages-description">
+              Все достопримечательности находятся очень близко
+            </p>
           </li>
           <li class="advantages-item">
-            <div class="advantages-blocks">
-              <div class="advantages-blocks-text">
-                <h3 class="advantages-block-title">
-                  Мало туристов
-                </h3>
-                <p class="advantages-block-number">
-                  - №5 -
-                </p>
-                <p class="advantages-block-description">
-                  Большинство едет в Гранд Каньон и толпится там
-                </p>
-              </div>
-            </div>
+            <h3 class="advantages-item-title">
+              Красивая дорога
+            </h3>
+            <p class="advantages-number">
+              - №4 -
+            </p>
+            <p class="advantages-description">
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">
+              Мало туристов
+            </h3>
+            <p class="advantages-number">
+              - №5 -
+            </p>
+            <p class="advantages-description">
+              Большинство едет в Гранд Каньон и толпится там
+            </p>
           </li>
         </ul>
       </section>
