--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link navigation-link--button" href="#">
               ХОЧУ СЮДА!
             </a>
           </li>
@@ -119,10 +119,10 @@
               </li>
             </ul>
           </fieldset>
-          <button class="button" type="submit">
+          <button class="button button--submit" type="submit">
             Применить
           </button>
-          <button class="button" type="reset">
+          <button class="button button--reset" type="reset">
             Сбросить
           </button>
         </form>             
@@ -150,42 +150,44 @@
       <section class="hotels">
         <h2 class="visually-hidden">Результаты поиска</h2>
         <ul class="hotel-list">
-          <li class="hotel-card"><!--добавить дополнительные обертки для стилизации-->
-            <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" wight="299" height="206" alt="Отель Amara Resort & Spa.">
-              <h3 class="hotel-card-title">Amara Resort & Spa</h3>
-            </a>                  
-            <span class="hotel-group">Гостиница</span>
-            <span class="hotel-card-price">От 4000 ₽</span>
-            <a class="hotel-card-button button" href="#">подробнее</a>
-            <a class="hotel-like-button button" href="#">В избранное</a>
-            <!-- Рейтинг в звездах --> <!--div внутри которого img со звездами, в один ряд 4 звезды-->
-            <span class="hotel-card-rating">Рейтинг: 8,5</span>
-          </li>
-          <li class="hotel-card">
-            <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-2.jpg" wight="299" height="206" alt="Отель Desert Quail Inn.">
-              <h3 class="hotel-card-title">Desert Quail Inn</h3>
-            </a>
-            <span class="hotel-group">Гостиница</span>
-            <span class="hotel-card-price">От 3000 ₽</span>
-            <a class="hotel-card-button button" href="#">подробнее</a>
-            <a class="hotel-like-button button" href="#">В избранное</a>
-            <!-- Рейтинг в звездах -->
-            <span class="hotel-card-rating">Рейтинг: 8,9</span>
-          </li>
-          <li class="hotel-card">
-            <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-3.jpg" wight="299" height="206" alt="Отель Villas at Poco Diablo.">
-              <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
-            </a>
-            <span class="hotel-group">Гостиница</span>
-            <span class="hotel-card-price">От 2000 ₽</span>
-            <a class="hotel-card-button button" href="#">подробнее</a>
-            <a class="hotel-like-button button" href="#">В избранное</a>
-            <!-- Рейтинг в звездах -->
-            <span class="hotel-card-rating">Рейтинг: 9,2</span>
-          </li>
+          <div class="index-columns">
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" wight="299" height="206" alt="Отель Amara Resort & Spa.">
+                <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+              </a>                  
+              <span class="hotel-group">Гостиница</span>
+              <span class="hotel-card-price">От 4000 ₽</span>
+              <a class="button button--hotel-card" href="#">подробнее</a>
+              <a class="button button--hotel-like" href="#">В избранное</a>
+              <!-- Рейтинг в звездах --> <!--div внутри которого img со звездами, в один ряд 4 звезды-->
+              <span class="hotel-card-rating">Рейтинг: 8,5</span>
+            </li>
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/hotel/hotel-2.jpg" wight="299" height="206" alt="Отель Desert Quail Inn.">
+                <h3 class="hotel-card-title">Desert Quail Inn</h3>
+              </a>
+              <span class="hotel-group">Гостиница</span>
+              <span class="hotel-card-price">От 3000 ₽</span>
+              <a class="button button--hotel-card" href="#">подробнее</a>
+              <a class="button button--hotel-like" href="#">В избранное</a>
+              <!-- Рейтинг в звездах -->
+              <span class="hotel-card-rating">Рейтинг: 8,9</span>
+            </li>
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/hotel/hotel-3.jpg" wight="299" height="206" alt="Отель Villas at Poco Diablo.">
+                <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+              </a>
+              <span class="hotel-group">Гостиница</span>
+              <span class="hotel-card-price">От 2000 ₽</span>
+              <a class="button button--hotel-card" href="#">подробнее</a>
+              <a class="button button--hotel-like-in" href="#">В избранном</a>
+              <!-- Рейтинг в звездах -->
+              <span class="hotel-card-rating">Рейтинг: 9,2</span>
+            </li>
+          </div>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
               <img class="hotel-card-image" src="images/hotel/hotel-4.jpg" wight="299" height="206" alt="Отель GreenTree Inn.">
@@ -193,14 +195,14 @@
             </a>
             <span class="hotel-group">Гостиница</span>
             <span class="hotel-card-price">От 3000 ₽</span>
-            <a class="hotel-card-button button" href="#">подробнее</a>
-            <a class="hotel-like-button button" href="#">В избранное</a>
+            <a class="button button--hotel-card" href="#">подробнее</a>
+            <a class="button button--hotel-like" href="#">В избранное</a>
             <!-- Рейтинг в звездах -->
             <span class="hotel-card-rating">Рейтинг: 9,2</span>
           </li>
         </ul>
 
-        <button class="button-pagination-show-more" type="button">Загрузить еще</button>
+        <button class="button button--load" type="button">Загрузить еще</button>
       </section>
 
       <section class="pagination">
@@ -236,7 +238,7 @@
     </main>
 
     <footer class="page-footer">
-      <section class="subscription">
+      <section class="subscription subscription--no-image">
         <h2 class="subscription-title">
           Подпишитесь на рассылку
         </h2>
