--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <a href="#">
+        <a class="logo-link" href="#">
           <img class="logo" src="images/logo.svg" wight="139" height="70" alt="Логотип city of Sedona.">
         </a>
         <ul class="navigation-list">
@@ -82,7 +82,7 @@
                 Седона не аттракцион для туристов, там течет своя жизнь
               </p>
             </div>
-            <img class="advantages-block" src="images/city-view.jpg" wight="800" height="384" alt="Вид на город.">
+            <img class="advantages-block-image" src="images/city-view.jpg" wight="800" height="384" alt="Вид на город.">
           </div>
   
           <ul class="advantages-list">
@@ -113,7 +113,7 @@
           </ul>
   
           <div class="advantages-block advantage-blok--reverse">
-            <img class="advantages-block" src="images/mountain-view.jpg" wight="800" height="384" alt="Вид на мост дьявола.">
+            <img class="advantages-block-image" src="images/mountain-view.jpg" wight="800" height="384" alt="Вид на мост дьявола.">
             <div class="advantages-block-text">
               <h3 class="advantages-block-title">
                 Там есть<br>
@@ -173,8 +173,7 @@
             Заинтересовались?
           </span>
           <p class="search-text">
-            Укажите предполагаемые даты поездки,
-  и мы покажем вам лучшие предложения гостиниц в Седоне
+            Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
           <a class="search-button" href="#">
             Поиск гостиницы в Седоне
@@ -186,7 +185,7 @@
             Подпишитесь на рассылку
           </h2>
           <p class="subscription-description">
-            Только полезная информация и никакого спама, честное бойскаутское!
+            Только полезная информация и никакого спама, <br> честное бойскаутское!
           </p>
           <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="field" placeholder="Ваш e-mail" type="email" name="subscription-email" id="subscription-email" required>
