--- a/catalog.html
+++ b/catalog.html
@@ -71,8 +71,8 @@
           </header>
     
           <section class="catalog-filter">
-            <h2 class="visually-hidden" hidden>Список гостиниц с фильтрами</h2>
-            <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+            <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
+            <form class="catalog-filter-form" action="https://echo.htmlacademy.ru/" method="get">
     
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Инфраструктура:</legend>
@@ -151,61 +151,57 @@
         </section>
   
         <section class="hotels">
-          <h2 class="visually-hidden" hidden>Результаты поиска</h2>
-          <div class="hotels-column">
-            <ul class="hotel-list">
-              <div class="index-columns">
-                <li class="hotel-card">
-                  <a class="hotel-card-link" href="#">
-                    <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" wight="299" height="206" alt="Отель Amara Resort & Spa.">
-                    <h3 class="hotel-card-title">Amara Resort & Spa</h3>
-                  </a>                  
-                  <span class="hotel-group">Гостиница</span>
-                  <span class="hotel-card-price">От 4000 ₽</span>
-                  <a class="button button--hotel-card" href="#">подробнее</a>
-                  <a class="button button--hotel-like" href="#">В избранное</a>
-                  <!-- Рейтинг в звездах --><!--div внутри которого img со звездами, в один ряд 4 звезды-->
-                  <span class="hotel-card-rating">Рейтинг: 8,5</span>
-                </li>
-                <li class="hotel-card">
-                  <a class="hotel-card-link" href="#">
-                    <img class="hotel-card-image" src="images/hotel/hotel-2.jpg" wight="299" height="206" alt="Отель Desert Quail Inn.">
-                    <h3 class="hotel-card-title">Desert Quail Inn</h3>
-                  </a>
-                  <span class="hotel-group">Гостиница</span>
-                  <span class="hotel-card-price">От 3000 ₽</span>
-                  <a class="button button--hotel-card" href="#">подробнее</a>
-                  <a class="button button--hotel-like" href="#">В избранное</a>
-                  <!-- Рейтинг в звездах -->
-                  <span class="hotel-card-rating">Рейтинг: 8,9</span>
-                </li>
-                <li class="hotel-card">
-                  <a class="hotel-card-link" href="#">
-                    <img class="hotel-card-image" src="images/hotel/hotel-3.jpg" wight="299" height="206" alt="Отель Villas at Poco Diablo.">
-                    <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
-                  </a>
-                  <span class="hotel-group">Гостиница</span>
-                  <span class="hotel-card-price">От 2000 ₽</span>
-                  <a class="button button--hotel-card" href="#">подробнее</a>
-                  <a class="button button--hotel-like-in" href="#">В избранном</a>
-                  <!-- Рейтинг в звездах -->
-                  <span class="hotel-card-rating">Рейтинг: 9,2</span>
-                </li>
-              </div>
-              <li class="hotel-card">
-                <a class="hotel-card-link" href="#">
-                  <img class="hotel-card-image" src="images/hotel/hotel-4.jpg" wight="299" height="206" alt="Отель GreenTree Inn.">
-                  <h3 class="hotel-card-title">GreenTree Inn</h3>
-                </a>
-                <span class="hotel-group">Гостиница</span>
-                <span class="hotel-card-price">От 3000 ₽</span>
-                <a class="button button--hotel-card" href="#">подробнее</a>
-                <a class="button button--hotel-like" href="#">В избранное</a>
-                <!-- Рейтинг в звездах -->
-                <span class="hotel-card-rating">Рейтинг: 9,2</span>
-              </li>
-            </ul>
-          </div>
+          <h2 class="visually-hidden">Результаты поиска</h2>
+          <ul class="hotel-list">
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" wight="299" height="206" alt="Отель Amara Resort & Spa.">
+                <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+              </a>                  
+              <span class="hotel-group">Гостиница</span>
+              <span class="hotel-card-price">От 4000 ₽</span>
+              <a class="button button--hotel-card" href="#">подробнее</a>
+              <a class="button button--hotel-like" href="#">В избранное</a>
+              <!-- Рейтинг в звездах --><!--div внутри которого img со звездами, в один ряд 4 звезды-->
+              <span class="hotel-card-rating">Рейтинг: 8,5</span>
+            </li>
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/hotel/hotel-2.jpg" wight="299" height="206" alt="Отель Desert Quail Inn.">
+                <h3 class="hotel-card-title">Desert Quail Inn</h3>
+              </a>
+              <span class="hotel-group">Гостиница</span>
+              <span class="hotel-card-price">От 3000 ₽</span>
+              <a class="button button--hotel-card" href="#">подробнее</a>
+              <a class="button button--hotel-like" href="#">В избранное</a>
+              <!-- Рейтинг в звездах -->
+              <span class="hotel-card-rating">Рейтинг: 8,9</span>
+            </li>
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/hotel/hotel-3.jpg" wight="299" height="206" alt="Отель Villas at Poco Diablo.">
+                <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+              </a>
+              <span class="hotel-group">Гостиница</span>
+              <span class="hotel-card-price">От 2000 ₽</span>
+              <a class="button button--hotel-card" href="#">подробнее</a>
+              <a class="button button--hotel-like-in" href="#">В избранном</a>
+              <!-- Рейтинг в звездах -->
+              <span class="hotel-card-rating">Рейтинг: 9,2</span>
+            </li>              
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/hotel/hotel-4.jpg" wight="299" height="206" alt="Отель GreenTree Inn.">
+                <h3 class="hotel-card-title">GreenTree Inn</h3>
+              </a>
+              <span class="hotel-group">Гостиница</span>
+              <span class="hotel-card-price">От 3000 ₽</span>
+              <a class="button button--hotel-card" href="#">подробнее</a>
+              <a class="button button--hotel-like" href="#">В избранное</a>
+              <!-- Рейтинг в звездах -->
+              <span class="hotel-card-rating">Рейтинг: 9,2</span>
+            </li>
+          </ul>
   
           <button class="button button--load" type="button">Загрузить еще</button>
         </section>
