Создает микросетку блока подписки

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             Заинтересовались?
           </span>
           <p class="search-text">
-            Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
+            Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
           <a class="search-button" href="#">
             Поиск гостиницы в Седоне
