--- a/catalog.html
+++ b/catalog.html
@@ -134,20 +134,22 @@
         <section class="select">
           <h2 class="visually-hidden">Сортировка</h2>
           <span class="select-filter">Найдено гостиниц: 38</span>
-          <select class="select-control" aria-label="Сортировка">
-            <option value="cheap">Сначала дешёвые</option>
-            <option value="expensive">Сначала дорогие</option>
-            <option value="popular">Сначала популярные</option>                             
-          </select>
-          <a class="button" href="#">
-            <span class="visually-hidden">Режим заголовка</span>
-          </a>
-          <a class="button" href="#">
-            <span class="visually-hidden">Режим слайд-шоу</span>
-          </a>
-          <a class="button" href="#">
-            <span class="visually-hidden">Режим списка</span>
-          </a>
+          <div class="sorting-container">
+            <select class="select-control" aria-label="Сортировка">
+              <option value="cheap">Сначала дешёвые</option>
+              <option value="expensive">Сначала дорогие</option>
+              <option value="popular">Сначала популярные</option>                             
+            </select>
+            <a class="button" href="#">
+              <span class="visually-hidden">Режим заголовка</span>
+            </a>
+            <a class="button" href="#">
+              <span class="visually-hidden">Режим слайд-шоу</span>
+            </a>
+            <a class="button" href="#">
+              <span class="visually-hidden">Режим списка</span>
+            </a>
+          </div>
         </section>
   
         <section class="hotels">
