--- a/catalog.html
+++ b/catalog.html
@@ -156,16 +156,20 @@
           <h2 class="visually-hidden">Результаты поиска</h2>
           <ul class="hotel-list">
             <li class="hotel-card">
-              <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" wight="299" height="206" alt="Отель Amara Resort & Spa.">
-                <h3 class="hotel-card-title">Amara Resort & Spa</h3>
-              </a>                  
-              <span class="hotel-group">Гостиница</span>
-              <span class="hotel-card-price">От 4000 ₽</span>
-              <a class="button button--hotel-card" href="#">подробнее</a>
-              <a class="button button--hotel-like" href="#">В избранное</a>
-              <!-- Рейтинг в звездах --><!--div внутри которого img со звездами, в один ряд 4 звезды-->
-              <span class="hotel-card-rating">Рейтинг: 8,5</span>
+              <div class="hotel-card-all">
+                <a class="hotel-card-link" href="#">
+                  <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" wight="299" height="206" alt="Отель Amara Resort & Spa.">
+                  <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+                </a>
+                <div class="hotel-card-content">
+                  <span class="hotel-group">Гостиница</span>
+                  <span class="hotel-card-price">От 4000 ₽</span>
+                  <a class="button button--hotel-card" href="#">подробнее</a>
+                  <a class="button button--hotel-like" href="#">В избранное</a>
+                  <!-- Рейтинг в звездах --><!--div внутри которого img со звездами, в один ряд 4 звезды-->
+                  <span class="hotel-card-rating">Рейтинг: 8,5</span>
+                </div>                             
+              </div>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
