--- a/catalog.html
+++ b/catalog.html
@@ -121,12 +121,19 @@
                   </li>
                 </ul>
               </fieldset>
-              <button class="button button--submit" type="submit">
-                Применить
-              </button>
-              <button class="button button--reset" type="reset">
-                Сбросить
-              </button>
+              <div class="some-box">
+                <p class="catalog-filter-prise">
+                  Стоимость, ₽:
+                </p>                
+              </div>
+              <div class="catalog-filter-bottons">
+                <button class="button button--submit" type="submit">
+                  Применить
+                </button>
+                <button class="button button--reset" type="reset">
+                  Сбросить
+                </button>
+              </div>
             </form>             
           </section>
         </div>
@@ -135,11 +142,13 @@
           <h2 class="visually-hidden">Сортировка</h2>
           <span class="select-filter">Найдено гостиниц: 38</span>
           <div class="sorting-container">
-            <select class="select-control" aria-label="Сортировка">
-              <option value="cheap">Сначала дешёвые</option>
-              <option value="expensive">Сначала дорогие</option>
-              <option value="popular">Сначала популярные</option>                             
-            </select>
+            <div class="sorting-type">
+              <select class="select-control" aria-label="Сортировка">
+                <option value="cheap">Сначала дешёвые</option>
+                <option value="expensive">Сначала дорогие</option>
+                <option value="popular">Сначала популярные</option>                             
+              </select>
+            </div>
             <a class="button" href="#">
               <span class="visually-hidden">Режим заголовка</span>
             </a>
@@ -223,7 +232,9 @@
             </li>
           </ul>
   
-          <button class="button button--load" type="button">Загрузить еще</button>
+          <div class="button-line">
+            <button class="button button--load" type="button">Загрузить еще</button>
+          </div>
         </section>
   
         <section class="pagination">
